--- a/架构图.html
+++ b/架构图.html
@@ -210,11 +210,11 @@
         </div>
         <div class="component">
             <div class="component-content">
-                <strong>支持的模型</strong><br>
+                <strong>现支持的模型</strong><br>
                 <div class="model-list">
-                    <div class="model">🔹 GPT4o</div>
+                    <div class="model">🔹 GPT4</div>
                     <div class="model">🔹 Qwen</div>
-                    <div class="model">🔹 GLM4</div>
+                    <div class="model">🔹 GLM-4</div>
                 </div>
             </div>
             <div class="tooltip">
