--- a/评估层的数据流.html
+++ b/评估层的数据流.html
@@ -27,16 +27,19 @@
             graph TD
             %% 模型效果评估层
             A[输入 Task 和 last_json_output] --> B[调用 evaluate.py]
-            B --> |Task1| C1[选择 Task1 评估分支]
-            B --> |Task2| C2[选择 Task2 评估分支]
+            B --> C{判断 Task 类型} %% 新增判断菱形框
 
-            %% 处理 Task1 的评估
-            C1 --> D1[处理 Task1 的评估逻辑]
-            D1 --> E1[输出 Task1 评估指标]
+            %% 分支根据Task的不同而选择
+            C --> |Task1| D1[选择 Task1 评估分支]
+            C --> |Task2| D2[选择 Task2 评估分支]
 
-            %% 处理 Task2 的评估
-            C2 --> D2[处理 Task2 的评估逻辑]
-            D2 --> E2[输出 Task2 评估指标]
+            %% Task1 评估逻辑
+            D1 --> E1[处理 Task1 的评估逻辑]
+            E1 --> F1[输出 Task1 评估指标]
+
+            %% Task2 评估逻辑
+            D2 --> E2[处理 Task2 的评估逻辑]
+            E2 --> F2[输出 Task2 评估指标]
         </div>
     </div>
 
