更新相关的文档。

--- a/文档/项目架构图.html
+++ b/文档/项目架构图.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLP 架构图</title>
     <style>
         body {
@@ -26,10 +25,11 @@
             width: 90%;
             display: flex;
             justify-content: flex-start;
-            align-items: center;
+            align-items: flex-start;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             background-color: white;
+            box-sizing: border-box;
         }
 
         /* 为不同的层增加背景颜色 */
@@ -60,13 +60,21 @@
             margin: 10px;
             border-radius: 8px;
             background-color: #f9f9f9;
-            width: 80%;
-            min-height: 150px; /* 设置最小高度 */
+            height: 200px;
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
             position: relative;
+        }
+
+        /* 根据组件所属层设置宽度 */
+        .component-half {
+            width: calc(50% - 40px);
+        }
+
+        .component-third {
+            width: calc(33.333% - 40px);
         }
 
         .component-content {
@@ -91,7 +99,7 @@
             padding: 10px;
             border-radius: 5px;
             font-size: 12px;
-            width: 200px;
+            width: 220px;
             text-align: center;
             z-index: 1;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -108,14 +116,24 @@
         .model-list {
             display: flex;
             justify-content: space-around;
+            flex-wrap: wrap;
         }
 
         .model {
             border: 1px solid #666;
-            padding: 10px;
+            padding: 5px 10px;
             border-radius: 8px;
             background-color: #e6f7ff;
             margin: 5px;
+            font-size: 14px;
+        }
+
+        /* 使组件在一行显示多个 */
+        .layer-content {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         /* 响应式设计 */
@@ -130,7 +148,8 @@
             }
 
             .component {
-                width: 90%;
+                width: 100% !important;
+                margin: 10px 0;
             }
         }
     </style>
@@ -139,31 +158,33 @@
 
 <div class="container">
 
-    <!-- Evaluation Layer -->
+    <!-- Business Layer -->
     <div class="layer">
-        <div class="layer-title">📊 评估层</div>
-        <div class="component">
-            <div class="component-content">
-                <strong>🧮 Evaluator</strong><br>
-                📊 提供分类任务的评估方法<br>
-                📝 文本生成任务的评估（如 BLEU, Rouge）<br>
-                📊 JSON 结构和字段检查<br>
-                📈 扩展性：支持自定义评估标准和指标<br>
+        <div class="layer-title">🏢 业务层</div>
+        <div class="layer-content">
+            <div class="component component-half">
+                <div class="component-content">
+                    <strong>🧠 TaskHandler</strong><br>
+                    📚 处理特定任务：<br>
+                    - 👩‍🏫 教师四分类任务<br>
+                    - 🏫 课堂活动分类任务<br>
+                    🔄 集成模型输出和业务逻辑<br>
+                    📈 可扩展性：支持添加新任务<br>
+                </div>
+                <div class="tooltip">
+                    业务层负责处理具体的算法任务，将模型结果应用于业务场景。
+                </div>
             </div>
-            <div class="tooltip">
-                评估层负责对模型输出进行各种评估，支持分类和生成任务。
-            </div>
-        </div>
-        <div class="component">
-            <div class="component-content">
-                <strong>📊 常见指标</strong><br>
-                🎯 准确率（Accuracy）<br>
-                🎯 精确率（Precision）<br>
-                🎯 召回率（Recall）<br>
-                🎯 F1 分数
-            </div>
-            <div class="tooltip">
-                使用常见的分类任务指标评估模型性能。
+            <div class="component component-half">
+                <div class="component-content">
+                    <strong>🔧 算法逻辑</strong><br>
+                    🧮 定义任务所需的算法流程<br>
+                    ⚙️ 调用相应的模型和数据处理模块<br>
+                    🔍 结果分析与决策支持
+                </div>
+                <div class="tooltip">
+                    实现具体任务的算法逻辑，提供决策支持。
+                </div>
             </div>
         </div>
     </div>
@@ -171,25 +192,29 @@
     <!-- Data Processing Layer -->
     <div class="layer">
         <div class="layer-title">📊 数据处理层</div>
-        <div class="component">
-            <div class="component-content">
-                <strong>💻 DataProcessor(根据Task不同进行不同的处理)</strong><br>
-                📑 支持从不同数据结构（如 DataFrame、CSV）中提取数据<br>
-                ✏️ 可扩展性：支持数据预处理（如文本清理、规范化）<br>
-                📦 处理结果可以动态存储到不同数据格式（如新增列或导出文件）
+        <div class="layer-content">
+            <div class="component component-half">
+                <div class="component-content">
+                    <strong>💻 DataProcessor</strong><br>
+                    📥 数据导入：支持 CSV、Excel、数据库等<br>
+                    ✏️ 数据预处理：清洗、去噪、格式转换<br>
+                    🔄 特征工程：提取特征、向量化<br>
+                    📊 数据增强：数据扩充与合成
+                </div>
+                <div class="tooltip">
+                    数据处理层负责数据的导入、清洗和特征提取等预处理工作。
+                </div>
             </div>
-            <div class="tooltip">
-                数据处理层负责从不同数据源中提取和处理文本数据。
-            </div>
-        </div>
-        <div class="component">
-            <div class="component-content">
-                <strong>⚙️ 自定义操作</strong><br>
-                ✂️ 支持用户自定义列操作<br>
-                🔍 自动提取和处理文本数据
-            </div>
-            <div class="tooltip">
-                用户可以根据需求自定义数据处理步骤。
+            <div class="component component-half">
+                <div class="component-content">
+                    <strong>⚙️ 自定义处理</strong><br>
+                    🛠 支持用户自定义数据处理管道<br>
+                    📄 配置文件或界面选择处理步骤<br>
+                    🔌 可插拔式模块，方便扩展
+                </div>
+                <div class="tooltip">
+                    允许用户根据需求自定义数据处理流程，提升灵活性。
+                </div>
             </div>
         </div>
     </div>
@@ -197,38 +222,43 @@
     <!-- Model Layer -->
     <div class="layer">
         <div class="layer-title">🧠 模型层</div>
-        <div class="component">
-            <div class="component-content">
-                <strong>🎯 ModelAPI</strong><br>
-                🔗 封装模型 API 调用<br>
-                ⚙️ 动态配置（如模型名称、API 版本）<br>
-                🛠 统一接口：`analyze_text`
-            </div>
-            <div class="tooltip">
-                模型层负责通过API与不同的NLP模型进行通信。
-            </div>
-        </div>
-        <div class="component">
-            <div class="component-content">
-                <strong>现支持的模型</strong><br>
-                <div class="model-list">
-                    <div class="model">🔹 GPT4</div>
-                    <div class="model">🔹 Qwen</div>
-                    <div class="model">🔹 GLM-4</div>
+        <div class="layer-content">
+            <div class="component component-third">
+                <div class="component-content">
+                    <strong>🎯 ModelAPI</strong><br>
+                    🔗 封装模型 API 调用<br>
+                    ⚙️ 动态配置：模型名称、版本、参数<br>
+                    🛠 统一接口：`analyze_text`、`predict`<br>
+                    📡 异步调用支持，提高性能
+                </div>
+                <div class="tooltip">
+                    模型层负责与各种 NLP 模型进行交互，提供统一的接口。
                 </div>
             </div>
-            <div class="tooltip">
-                支持多种闭源大模型的调用，支持更多模型扩展。
+            <div class="component component-third">
+                <div class="component-content">
+                    <strong>🌐 支持的模型</strong><br>
+                    <div class="model-list">
+                        <div class="model">🔹 GPT-4</div>
+                        <div class="model">🔹 Qwen</div>
+                        <div class="model">🔹 GLM-4</div>
+                    </div>
+                    ➕ 持续集成更多模型
+                </div>
+                <div class="tooltip">
+                    支持多种模型，方便扩展。
+                </div>
             </div>
-        </div>
-        <div class="component">
-            <div class="component-content">
-                <strong>📈 扩展性</strong><br>
-                ➕ 可支持更多闭源和开源模型<br>
-                🔧 灵活配置 API 端点和参数
-            </div>
-            <div class="tooltip">
-                模型层可以灵活支持新模型的扩展，配置API端点。
+            <div class="component component-third">
+                <div class="component-content">
+                    <strong>📈 扩展性与优化</strong><br>
+                    🔧 模型管理：加载、更新、切换<br>
+                    ⚡️ 性能优化：批量预测、缓存机制<br>
+                    🧩 模型组合：集成多个模型的结果
+                </div>
+                <div class="tooltip">
+                    提供模型管理和性能优化功能，支持复杂的模型组合。
+                </div>
             </div>
         </div>
     </div>
