--- a/文档/项目架构图.html
+++ b/文档/项目架构图.html
@@ -195,7 +195,7 @@
         <div class="layer-content">
             <div class="component component-half">
                 <div class="component-content">
-                    <strong>💻 DataProcessor</strong><br>
+                    <strong>💻 DialougueProcessor</strong><br>
                     📥 数据导入：支持 CSV、Excel、数据库等<br>
                     ✏️ 数据预处理：清洗、去噪、格式转换<br>
                     🔄 特征工程：提取特征、向量化<br>
